# ARCh2026-BaseStation

./: .gitignore  Dockerfile.django  Dockerfile.fastapi  Dockerfile.frontend  Dockerfile.process  Dockerfile.ros2_base  README.md  docker-compose.yml  run.md  setup.yaml  startup.sh
.github/workflows/: django.yml  node.js.yml  react-ci.yml
basestationproject/: Dockerfile.django  db.sqlite3  manage.py  requirements.txt  setup.yaml  supervisord.conf
basestationproject/backendapi/: admin.py  asgi.py  models.py  serialisers.py  urls.py  views.py
basestationproject/basestationproject/: asgi.py  settings.py  urls.py  wsgi.py
basestationproject/fastapi_server/: Dockerfile.fastapi  main.py  requirements.txt
basestationproject/frontend/: index.html  package-lock.json  package.json  vite.config.js
basestationproject/ros2_ws/: Dockerfile.ros2_base
basestationproject/ros2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
basestationproject/ros2_ws/src/custom_msgs/msg/: ArmIncrementCommand.msg  BatteryFeedback.msg  CoreControl.msg  CoreFeedback.msg  DrivetrainControl.msg  DrivetrainFeedback.msg  ESP32Control.msg  ESP32Sensors.msg  RadioFeedback.msg  RoverLog.msg  ScienceControl.msg  ScienceFeedback.msg
process_manager/: main.py  requirements.txt
process_manager/templates/: index.html
robot_controller/: setup.env
robot_controller/arm/: fake_integrator.py  test_arm_feedback_publisher.py
robot_controller/battery/: battery_publisher.py
robot_controller/camera/: camera_stream_subscriber.py  camera_video_publisher.py
robot_controller/logger/: logger.py
(+54 files in other folders)
